<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NewEmployeeActivity"
    android:background="@drawable/bkgr_animation">


    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/addEmpTxtView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="Adauga angajat"
            android:textColor="@android:color/white"
            android:textSize="30sp"
            app:fontFamily="@string/font_family_1"
            app:layout_constraintHorizontal_bias="0.492"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/bottomBorderAddEmp"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="8dp"
            android:background="@color/whiteColor"
            app:layout_constraintTop_toBottomOf="@+id/addEmpTxtView"
            />

        <TextView
            android:id="@+id/fullNameTxtViewAddEmp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"

            android:layout_marginBottom="8dp"
            android:text="Nume complet"
            android:textColor="@color/whiteColor"
            android:textSize="@dimen/font_size"

            app:fontFamily="@string/font_family_1"
            app:layout_constraintBottom_toTopOf="@+id/fullNameEditTxtAddEmp"
            app:layout_constraintTop_toBottomOf="@+id/bottomBorderAddEmp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.491"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/fullNameEditTxtAddEmp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/rounded_edittext"
            android:drawableStart="@drawable/ic_person_white"

            android:drawableLeft="@drawable/ic_person_white"
            android:drawablePadding="10dp"
            android:hint="@string/username_hint"
            android:inputType="textPersonName"
            android:textColor="@android:color/white"
            android:textColorHint="@color/greyHintColor"

            android:textSize="@dimen/font_size"
            app:fontFamily="@string/font_family_1"
            app:layout_constraintBottom_toTopOf="@+id/emailTxtViewAddEmp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />


        <TextView
            android:id="@+id/emailTxtViewAddEmp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"

            android:layout_marginBottom="8dp"
            android:text="@string/email_label"
            android:textColor="@color/whiteColor"
            android:textSize="@dimen/font_size"

            app:fontFamily="@string/font_family_1"
            app:layout_constraintBottom_toTopOf="@+id/mailEditTxtAddEmp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/mailEditTxtAddEmp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginEnd="8dp"

            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/rounded_edittext"
            android:drawableStart="@drawable/ic_mail"
            android:drawableLeft="@drawable/ic_mail"
            android:drawablePadding="10dp"
            android:hint="@string/email_hint"
            android:inputType="textEmailAddress"

            android:textColor="@android:color/white"
            android:textColorHint="@color/greyHintColor"
            android:textSize="@dimen/font_size"
            app:fontFamily="@string/font_family_1"
            app:layout_constraintBottom_toTopOf="@+id/phoneNumberTxtViewAddEmp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/phoneNumberTxtViewAddEmp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginEnd="8dp"

            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/phone_number_label"

            android:textColor="@color/whiteColor"
            android:textSize="@dimen/font_size"
            app:fontFamily="@string/font_family_1"
            app:layout_constraintBottom_toTopOf="@+id/phoneNumberEditTextAddEmp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/phoneNumberEditTextAddEmp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"

            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:background="@drawable/rounded_edittext"
            android:drawableStart="@drawable/ic_phone"
            android:drawableLeft="@drawable/ic_phone"
            android:drawablePadding="10dp"
            android:hint="@string/phone_number_hint"

            android:inputType="phone"
            android:textColor="@android:color/white"
            android:textColorHint="@color/greyHintColor"
            android:textSize="@dimen/font_size"
            app:fontFamily="@string/font_family_1"
            app:layout_constraintBottom_toTopOf="@+id/genderTxtViewAddEmp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/genderTxtViewAddEmp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginEnd="8dp"

            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp"
            android:text="Sex"

            android:textColor="@color/whiteColor"
            android:textSize="@dimen/font_size"
            app:fontFamily="@string/font_family_1"
            app:layout_constraintBottom_toTopOf="@+id/genderSpinnerAddEmp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent" />

        <Spinner
            android:id="@+id/genderSpinnerAddEmp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"

            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="68dp"
            android:hint="@string/phone_number_hint"
            android:textSize="@dimen/font_size"
            app:fontFamily="@string/font_family_1"
            app:layout_constraintBottom_toTopOf="@+id/jobTxtViewAddEmp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/jobTxtViewAddEmp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginEnd="8dp"

            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp"
            android:text="Sex"
            android:textColor="@color/whiteColor"
            android:textSize="@dimen/font_size"
            app:fontFamily="@string/font_family_1"
            app:layout_constraintBottom_toTopOf="@+id/jobSpinnerAddEmp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent" />

        <Spinner
            android:id="@+id/jobSpinnerAddEmp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"

            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="68dp"
            android:hint="@string/phone_number_hint"
            android:textSize="@dimen/font_size"
            app:fontFamily="@string/font_family_1"
            app:layout_constraintBottom_toTopOf="@+id/signupBtnSignUp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/signupBtnSignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="80dp"
            android:layout_marginLeft="80dp"
            android:layout_marginEnd="80dp"
            android:layout_marginRight="80dp"

            android:layout_marginBottom="8dp"
            android:background="@drawable/rounded_button_login"
            android:text="@string/sign_up"
            android:textColor="@color/whiteColor"
            app:layout_constraintBottom_toTopOf="@+id/backBtnSignUp"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/backBtnSignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="80dp"
            android:layout_marginLeft="80dp"
            android:layout_marginEnd="80dp"
            android:layout_marginRight="80dp"

            android:layout_marginBottom="5dp"
            android:background="@drawable/rounded_button_login"
            android:text="@string/back_label"

            android:textColor="@color/whiteColor"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent" />
    </android.support.constraint.ConstraintLayout>

</ScrollView>